--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -2,5 +2,8 @@
   "extends": "../tsconfig",
   "compilerOptions": {
     // Avoid expo-cli auto-generating a tsconfig
+    "paths": {
+      "react": ["../node_modules/@types/react"]
+    }
   }
 }
