--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
+    "@types/lodash": "^4.14.202",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
     "commitlint": "^17.0.2",
@@ -159,5 +160,10 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-vector-icons": "^10.0.3"
   }
 }
