--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "rootDir": ".",
     "paths": {
-      "rnmd": ["./src/index"]
+      "rnmd": ["./src/index"],
+      "react": ["./node_modules/@types/react"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
