--- a/package.json
+++ b/package.json
@@ -164,6 +164,6 @@
   "dependencies": {
     "react-native-gesture-handler": "^2.14.1",
     "react-native-reanimated": "~3.3.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-svg": "^14.1.0"
   }
 }
