--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ilz5753/rnmd",
-  "version": "0.2.10",
+  "version": "0.3.0",
   "description": "React Native Markdown Editor and View",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -26,7 +26,7 @@
     "!**/.*"
   ],
   "scripts": {
-    "example": "yarn workspace rnmd-example",
+    "example": "yarn workspace example",
     "test": "jest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
@@ -82,6 +82,19 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
+  },
+  "dependencies": {
+    "@react-native-clipboard/clipboard": "*",
+    "@react-native/babel-preset": "*",
+    "react": "*",
+    "react-native": "*",
+    "react-native-code-highlighter": "*",
+    "react-native-error-boundary": "*",
+    "react-native-gesture-handler": "*",
+    "react-native-reanimated": "*",
+    "react-native-svg": "*",
+    "react-syntax-highlighter": "*",
+    "simple-markdown": "*"
   },
   "workspaces": [
     "example"
@@ -162,16 +175,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "@react-native-clipboard/clipboard": "^1.13.2",
-    "@react-native/babel-preset": "^0.73.19",
-    "react-native-code-highlighter": "^1.2.2",
-    "react-native-error-boundary": "^1.2.4",
-    "react-native-gesture-handler": "^2.14.1",
-    "react-native-reanimated": "^3.6.1",
-    "react-native-svg": "^14.1.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "simple-markdown": "^0.7.3"
   }
 }
